[tool.poetry]
name = "serifan"
version = "0.1.0"
description = ""
authors = ["Brian Pepple <bdpepple@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
marshmallow = "^3.13.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
